// Copyright (c) 2022 Gitpod GmbH. All rights reserved.
// Licensed under the GNU Affero General Public License (AGPL).
// See License-AGPL.txt in the project root for license information.

syntax = "proto3";

package contentservice;

option go_package = "github.com/gitpod-io/gitpod/content-service/api";

service UsageReportService {
  // UploadURL provides a URL to which clients can upload the content via HTTP PUT.
  rpc UploadURL(UsageReportUploadURLRequest) returns (UsageReportUploadURLResponse) {}
}

message UsageReportUploadURLRequest {
  string name = 1;
}

message UsageReportUploadURLResponse {
  string url = 1;
}
